@@ -1,3 +1,12 @@
+2002-11-17  Stuart Hughes  <seh@zee2.com>
+
+	* linux-arm-low.c (arm_num_regs): Increase.
+	(arm_regmap): Include status register.
+
+2002-11-17  Daniel Jacobowitz  <drow@mvista.com>
+
+	* linux-low.c (register_addr): Remove incorrect -1 check.
+
 2002-08-29  Daniel Jacobowitz  <drow@mvista.com>
 
 	* linux-low.c (linux_create_inferior): Call setpgid.  Return
